@@ -1,6 +1,6 @@
 package com.example.bookApplication1.Service;
 
-
+import java.util.stream.Collectors;
 import com.example.bookApplication1.Entity.Book;
 import com.example.bookApplication1.Repository.BookRepository;
 import com.example.bookApplication1.exception.BookNotFoundException;
@@ -16,20 +16,20 @@ public class BookService {
 
     @Autowired
     BookRepository bookRepository;
+
     public Book addBook(Book book) {
         return bookRepository.save(book);
-
     }
+
     public Book getBookById(Integer id) {
-        Optional<Book> book = bookRepository.findById(id);  // Using findById instead of findByTitle
+        Optional<Book> book = bookRepository.findById(id);
         return book.orElseThrow(() -> new BookNotFoundException("Book with id " + id + " not found"));
     }
-
 
     public List<Book> getAllBooks() {
         return bookRepository.findAll().stream()
                 .filter(book -> book.getTitle() != null)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Book updateBook(Book book) {
@@ -41,9 +41,6 @@ public class BookService {
             throw new BookNotFoundException("Book with id " + id + " not found");
         }
         bookRepository.deleteById(id);
-
         return ResponseEntity.ok("Book successfully deleted");
-
     }
-
 }
